# api_from_scratch

./: .coverage  .flake8  .gitignore  README.md  TODO  pyproject.toml
src/: run_dev.py
src/api_from_scratch/: constants.py
src/api_from_scratch/api/: fixed_returns.py  main.py
src/api_from_scratch/api/core/: config.py
src/api_from_scratch/api/v1/: items.py  root.py  router.py  users.py
src/api_from_scratch/crud/: base.py  post_item.py  user.py
src/api_from_scratch/db/: conn.py
src/api_from_scratch/structs/: placeholders.py
src/api_from_scratch/structs/internal/: post_item.py
src/api_from_scratch/structs/responses/: api_root.py  api_v1.py  v1_item.py  v1_user.py
src/tests/: test_api.py  test_crud.py  test_db.py
src/tests/helpers/: base_api_tests.py  base_crud_tests.py
