[tool.poetry]
name = "api_from_scratch"
version = "0.1.0"
description = ""
authors = ["Oracen <alex.stenlake@gmail.com>"]

[tool.poetry.scripts]
run-dev="src.run_dev:main"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
requests = "^2.26.0"
types-requests = "^2.25.6"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.5"}
mypy = "^0.910"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
loguru = "^0.5.3"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
source=["src/api_from_scratch"]

[tool.coverage.report]
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
